[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Pages/LeaderboardList/LeaderboardSlot.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Buttons/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PageTitle/PageTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/plus-64.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Pages/LeaderboardList/LeaderboardList.gd" type="Script" id=6]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=7]

[node name="LeaderboardList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTitle" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 1024.0
margin_bottom = 50.0
text = "Your Leaderboards"

[node name="SlotContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 120.0

[node name="Slot" type="Control" parent="VBoxContainer/SlotContainer"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer"]
margin_right = 984.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 278.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "name"

[node name="entries" type="Label" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer/HBoxContainer"]
margin_left = 303.0
margin_top = 4.0
margin_right = 581.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "entries"

[node name="highscore" type="Label" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer/HBoxContainer"]
margin_left = 606.0
margin_top = 4.0
margin_right = 884.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "score"
align = 2

[node name="actions" type="Label" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer/HBoxContainer"]
margin_left = 909.0
margin_top = 4.0
margin_right = 984.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "actions"
align = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/SlotContainer/Slot/VBoxContainer"]
margin_top = 38.0
margin_right = 984.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.313726, 0.501961, 0.556863, 1 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 45 )

[node name="NewButton" parent="VBoxContainer/Control" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 55.0
icon = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/Control/NewButton" to="." method="_on_NewButton_pressed"]
